# paper_rag

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: evaluation_dataset_format.md  manual_acceptance.md  plan.md  task_history.md
docs/task/: 01_cli_mvp.md  01_cli_mvp_addendum_01_document_identity.md  02_web_inspector_mvp.md  03_evaluation_foundation.md  04_rag_component_architecture.md  05_model_source_selection.md
eval/: README.md
eval/datasets/: golden.documents.json  golden.jsonl
eval/schemas/: eval_case.schema.json
src/paper_rag/: __init__.py  __main__.py  cli.py  config.py  embeddings.py  exceptions.py  logging.py  schemas.py
src/paper_rag/api/: __init__.py  app.py  schemas.py
src/paper_rag/components/: __init__.py  interfaces.py  registry.py  types.py
src/paper_rag/documents/: __init__.py  parser.py
src/paper_rag/domain/: __init__.py  models.py
src/paper_rag/evaluation/: __init__.py  answer_metrics.py  dataset.py  matching.py  reporting.py  retrieval_metrics.py  runner.py
src/paper_rag/indexing/: __init__.py  chunking.py  local_index.py  metadata_store.py  pipeline.py  vector_store.py
src/paper_rag/qa/: __init__.py  answering.py
src/paper_rag/retrieval/: __init__.py  (+1 more)
tests/: conftest.py  test_answer_metrics.py  test_api.py  test_chunking.py  test_cli.py  test_components.py  test_config.py  test_documents_parser.py  test_embeddings.py  test_evaluation_dataset.py  test_evaluation_runner.py  test_index_pipeline.py  test_local_index.py  test_qa.py  test_retrieval_metrics.py  test_upload_storage.py  test_vector_store.py
(+17 files in other folders)
