[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "paper-rag"
version = "0.1.0"
description = "A learning project for a PaperQA2-like CLI RAG system over local papers."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "paper_rag contributors" }
]
dependencies = [
  "chromadb>=0.5,<1.0",
  "fastapi>=0.115,<1.0",
  "openai>=1.40,<3.0",
  "pydantic>=2.7,<3.0",
  "pymupdf>=1.24,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "tiktoken>=0.7,<1.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
paper-rag = "paper_rag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
